meta descriptions; documentation; julia antialiasing

--- a/chess.html
+++ b/chess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-10 Fri 22:48 -->
+<!-- 2022-06-18 Sat 12:11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Chess</title>
@@ -12,7 +12,9 @@
 <link rel="stylesheet" type="text/css" href="css/fonts.css">
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
-<script src="js/main.js"></script>
+<script async defer src="js/main.js"></script>
+<link rel=“canonical” href=“https://reillyraab.com/chess” />
+<meta name="description" content="Free online chess for correspondence play. Send links encoding game state to opponent."/>
 </head>
 <body>
 <div id="preamble" class="boilerplate">
