--- a/tex.html
+++ b/tex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-13 Mon 17:40 -->
+<!-- 2022-06-18 Sat 14:21 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Live Tex to SVG, PNG</title>
@@ -13,6 +13,8 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<link rel=“canonical” href=“https://reillyraab.com/tex" />
+<meta name="description" content="Live LaTeX to SVG and PNG rendering in the browser." />
 </head>
 <body>
 <div id="preamble" class="boilerplate">
