--- a/greyline.html
+++ b/greyline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-17 Fri 21:47 -->
+<!-- 2022-06-18 Sat 14:26 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Greyline Map</title>
@@ -12,7 +12,9 @@
 <link rel="stylesheet" type="text/css" href="css/fonts.css">
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
-<script async defer src="js/main.js"></script>
+<script src="js/main.js"></script>
+<link rel=“canonical” href=“https://reillyraab.com/greyline" />
+<meta name="description" content="A map of Earth showing where it's day or night." />
 <script async defer src="js/lib/astronomy.browser.js"></script>
 <script async defer src="js/lib/gpu.js"></script>
 <script async defer src="js/greyline.js"></script>
