fix script loading

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-17 Fri 21:39 -->
+<!-- 2022-06-19 Sun 16:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -12,7 +12,8 @@
 <link rel="stylesheet" type="text/css" href="css/fonts.css">
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
-<script async defer src="js/main.js"></script>
+<script src="js/main.js"></script>
+<meta name="description" content="My Curriculum Vitae"/>
 </head>
 <body>
 <div id="preamble" class="boilerplate">
@@ -23,7 +24,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="org8dfbb4a">
+<figure id="org016e40f">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
