--- a/euler-lagrange.html
+++ b/euler-lagrange.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-16 Thu 15:59 -->
+<!-- 2022-06-18 Sat 21:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Calculus of Variations</title>
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<meta name="description" content="Personal notes using the calculus of variations." />
 </head>
 <body>
 <div id="preamble" class="boilerplate">
