--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-17 Fri 13:50 -->
+<!-- 2022-06-19 Sun 16:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -13,6 +13,8 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<link rel=“canonical” href=“https://reillyraab.com" />
+<meta name="description" content="This site is a space for me to share my interest in various subjects, publish personal essays, and communicate about projects or developments which are important to me."/>
 </head>
 <body>
 <div id="preamble" class="boilerplate">
@@ -38,8 +40,8 @@
 <p>
 <a href="./demo.html">HTML Demo &amp; Reference</a> <br>
 <a href="./reading-list.html">Digital Bookshelf</a> <br>
-<a href="./julia.html">Julia</a> <br>
-<a href="./euler-lagrange.html">Calculus of Variations</a>
+<a href="./julia.html">Julia Sets</a> <br>
+<a href="./euler-lagrange.html">Calculus of Variations Notes</a>
 </p>
 </div>
 </div>
