--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-19 Sun 16:45 -->
+<!-- 2022-06-20 Mon 23:01 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -41,7 +41,8 @@
 <a href="./demo.html">HTML Demo &amp; Reference</a> <br>
 <a href="./reading-list.html">Digital Bookshelf</a> <br>
 <a href="./julia.html">Julia Sets</a> <br>
-<a href="./euler-lagrange.html">Calculus of Variations Notes</a>
+<a href="./euler-lagrange.html">Calculus of Variations Notes</a> <br>
+<a href="./ito.html">Stochastic Calculus Notes</a>
 </p>
 </div>
 </div>
